[package]
name = "rstracer"
version = "0.1.0"
authors = ["Ned Batchelder <ned@nedbatchelder.com>"]
edition = "2018"
publish = false

[dependencies]
# pyo3 = { version = "0.16" }
pyo3 = { git = "https://github.com/pyo3/pyo3" }

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[lib]
name = "rstracer"
crate-type = ["cdylib"]

[profile.release]
lto = "thin"
overflow-checks = true
